@@ -24,7 +24,7 @@ const COLORREF crefBlack = (RGB(0,0,0));          // Black
 /////////////////////////////////////////////////////////////////////////////
 // CEditExtn
 
-CEditExtn::CEditExtn() : m_bIsFocused(FALSE)
+CEditExtn::CEditExtn() : m_bIsFocused(FALSE), m_lastposition(-1)
 {
 	brInFocus.CreateSolidBrush(crefInFocus);
 	brNoFocus.CreateSolidBrush(crefNoFocus);
@@ -48,13 +48,20 @@ END_MESSAGE_MAP()
 void CEditExtn::OnSetFocus(CWnd* pOldWnd)
 {
 	m_bIsFocused = TRUE;
-	CEdit::OnSetFocus(pOldWnd);
+  CEdit::OnSetFocus(pOldWnd);
+	if (m_lastposition >= 0) {
+    int iLine = LineFromChar(m_lastposition);
+	  LineScroll(iLine);
+	  SetSel(m_nStartChar, m_nEndChar); 
+  }
 	Invalidate(TRUE);
 }
 
 void CEditExtn::OnKillFocus(CWnd* pNewWnd)
 {
 	m_bIsFocused = FALSE;
+	m_lastposition = LineIndex();
+  GetSel(m_nStartChar, m_nEndChar);
 	CEdit::OnKillFocus(pNewWnd);
 	Invalidate(TRUE);
 }
